<resources>

    <!-- Oferecer carona -->
    <string name="titulo_activity_oferecer_caronas">Oferecer Caronas</string>
    <string name="buscar_rota">Buscar rota</string>
    <string name="seu_destino">Digite seu destino</string>
    <string name="sua_localizacao">Digite sua localização atual</string>
    <string name="distancia">Distância (km)</string>
    <string name="descricao_localizacao_usuario">Icone localização do usuário</string>
    <string name="descricao_destina_usuario">Icone destino do usuário</string>
    <string name="titulo_instrucoes_oferecer_carona">Instruções</string>
    <string name="passos_oferecer_carona">O campo DISTÂNCIA significa a quilometragem que você está disposto a sair de sua rota para oferecer uma carona."\n"O mínimo permitido é 1 km.</string>

    <!-- Confirmar Rota -->
    <string name="titulo_confirmar_caronas_activity">Confirmar Carona</string>
    <string name="confirmar_rota">Confirmar rota</string>
    <string name="title_activity_maps">Map</string>

    <!-- Login -->
    <string name="titulo_activity_login">Login</string>
    <string name="email">Email</string>
    <!--<string name="exemplo_email">aluno@fatec.sp.gov.br</string>-->
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="novo_cadastro">Criar novo cadastro</string>

    <!-- Cadastro -->
    <string name="titulo_activity_cadastro">Cadastro</string>
    <string name="nome">Nome</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="turma">Turma</string>
    <string name="numero_celulas">Número Celular</string>
    <string name="perfil">Perfil</string>
    <string name="cadastro">Cadastrar</string>
    <!--<string name="exemplo_numero_celular">(dd)9xxxx-xxxx</string>-->
    <string-array name="turmas_array">
        <item> </item>
        <item> Gestão Empresarial (EaD) </item>
        <item> Análise e Desenv. de Sistemas </item>
        <item> Comércio Exterior </item>
        <item> Gestão Empresarial </item>
        <item> Logística Aeroportuária </item>
        <item> Redes de Computadores </item>
        <item> Gestão de Serviços </item>
        <item> Nenhuma </item>
    </string-array>
    <string-array name="perfil_array">
        <item> </item>
        <item>Oferecer carona</item>
        <item>Buscar carona</item>
    </string-array>

    <!-- Carona -->
    <string name="confirmar_carona">Confirmar</string>
    <string name="oferecer_carona">Oferecer Carona</string>

    <!-- Buscar Caronas -->
    <string name="procurar_carona">Procurar Carona</string>
    <string name="data">Data</string>
    <string name="horario">Horário</string>

    <!-- Reservar Carona -->
    <string name="sobre_carona">Sobre a carona</string>
    <string name="saida">Saída:</string>
    <string name="destino">Destino:</string>
    <string name="horas">Horas:</string>
    <string name="reservar">Reservar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Caronas</string>

</resources>
