<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gabriel.carona_fatec.LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"
        android:layout_above="@+id/edtEmailLogin"
        android:layout_alignLeft="@+id/edtEmailLogin"
        android:layout_alignStart="@+id/edtEmailLogin"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/edtEmailLogin"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/exemplo_email"
        android:layout_above="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:textStyle="bold"
        android:layout_marginBottom="49dp"
        android:layout_alignBottom="@+id/edtSenhaLogin"
        android:layout_alignLeft="@+id/edtSenhaLogin"
        android:layout_alignStart="@+id/edtSenhaLogin" />

    <EditText
        android:id="@+id/edtSenhaLogin"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Senha"
        android:inputType="textPassword"
        android:layout_marginBottom="25dp"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/edtEmailLogin"
        android:layout_alignStart="@+id/edtEmailLogin" />

    <Button
        android:id="@+id/button2"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:background="@color/colorVerde"
        android:textColor="@color/colorBranco"
        android:text="@string/entrar"
        android:onClick="logar"
        android:layout_above="@+id/textView6"
        android:layout_alignLeft="@+id/edtSenhaLogin"
        android:layout_alignStart="@+id/edtSenhaLogin" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="450dp"
        android:id="@+id/view3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:gravity="center"
        android:text="@string/novo_cadastro"
        android:textStyle="bold"
        android:onClick="novoCadastro"/>

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:layout_above="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
