<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.gabriel.carona_fatec.BuscarCaronasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/destino_usuario"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/descricao_destina_usuario" />

            <EditText
                android:id="@+id/edtDestinoUsuario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="40dp"
                android:background="@drawable/shape"
                android:paddingLeft="5sp"
                android:paddingRight="5sp"
                android:hint="@string/seu_destino"
                android:textColor="@color/colorBranco"
                android:textColorHint="@color/colorBranco"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/data"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/descricao_destina_usuario" />

            <EditText
                android:id="@+id/edtDataUsuario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="40dp"
                android:background="@drawable/shape"
                android:paddingLeft="5sp"
                android:paddingRight="5sp"
                android:hint="@string/data"
                android:inputType="date"
                android:textColor="@color/colorBranco"
                android:textColorHint="@color/colorBranco"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/horario"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/descricao_destina_usuario" />

            <EditText
                android:id="@+id/edtHoraUsuario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="40dp"
                android:background="@drawable/shape"
                android:paddingLeft="5sp"
                android:paddingRight="5sp"
                android:hint="@string/horario"
                android:inputType="time"
                android:textColor="@color/colorBranco"
                android:textColorHint="@color/colorBranco"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <!-- Sem texto -->

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorVerde"
            android:text="@string/procurar_carona"
            android:textColor="@color/colorBranco"
            android:onClick=""/>

    </LinearLayout>

</LinearLayout>

