<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gabriel.carona_fatec.ReservarCaronaActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="33dp"
        android:text="@string/sobre_carona"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="80dp"
        android:id="@+id/view2" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saida"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:layout_toEndOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destino"
        android:layout_above="@+id/imageView5"
        android:layout_alignLeft="@+id/textView14"
        android:layout_alignStart="@+id/textView14"
        android:layout_marginBottom="29dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:srcCompat="@drawable/saida"
        android:layout_above="@+id/imageView4"
        android:layout_alignLeft="@+id/textView13"
        android:layout_alignStart="@+id/textView13"
        android:layout_marginBottom="27dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:srcCompat="@drawable/destino"
        android:layout_alignBottom="@+id/textView15"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignStart="@+id/imageView3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="240dp"
        android:id="@+id/view3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:srcCompat="@drawable/clock"
        android:layout_alignBottom="@+id/textView16"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_alignStart="@+id/imageView4" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horas"
        android:layout_marginBottom="19dp"
        android:layout_alignBottom="@+id/view3"
        android:layout_alignLeft="@+id/textView15"
        android:layout_alignStart="@+id/textView15" />

    <Button
        android:id="@+id/button5"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:text="@string/reservar"
        android:background="@color/colorVerde"
        android:textColor="@color/colorBranco"
        android:onClick="inserirReserva"
        android:layout_marginBottom="21dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignLeft="@+id/imageView5"
        android:layout_alignStart="@+id/imageView5"
        android:layout_below="@+id/view3"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/motorista" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignLeft="@+id/imageView6"
        android:layout_alignStart="@+id/imageView6"
        android:layout_below="@+id/imageView6"
        android:layout_marginTop="21dp"
        app:srcCompat="@drawable/email" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignLeft="@+id/imageView7"
        android:layout_alignStart="@+id/imageView7"
        android:layout_below="@+id/imageView7"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/celular" />

    <TextView
        android:id="@+id/tv_saida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView14"
        android:layout_toEndOf="@+id/textView15"
        android:layout_toRightOf="@+id/textView15"
        android:text="-" />

    <TextView
        android:id="@+id/tv_destino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView15"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_toEndOf="@+id/textView15"
        android:layout_toRightOf="@+id/textView15"
        android:text="-" />

    <TextView
        android:id="@+id/tv_horario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView16"
        android:layout_toEndOf="@+id/textView15"
        android:layout_toRightOf="@+id/textView15"
        android:text="-" />

    <TextView
        android:id="@+id/tv_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView7"
        android:layout_alignLeft="@+id/textView16"
        android:layout_alignStart="@+id/textView16"
        android:text="-" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView8"
        android:layout_alignLeft="@+id/tv_nome"
        android:layout_alignStart="@+id/tv_nome"
        android:text="-" />

    <TextView
        android:id="@+id/tv_celular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:layout_alignBottom="@+id/imageView8"
        android:layout_alignLeft="@+id/tv_email"
        android:layout_alignStart="@+id/tv_email" />

</RelativeLayout>
